--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "gatsby": "^1.9.252",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
+    "gatsby-plugin-typography": "^1.7.18",
     "gatsby-source-filesystem": "^1.5.33",
     "gatsby-transformer-remark": "^1.7.40",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
-    "typography": "^0.16.16"
+    "typography": "^0.16.16",
+    "typography-theme-de-young": "^0.16.9"
   },
   "keywords": [
     "gatsby"
