--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "version": "1.0.0",
   "author": "Young Kim",
   "dependencies": {
-    "gatsby": "^1.9.252",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-google-analytics": "^1.0.31",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "gatsby-plugin-typography": "^1.7.18",
-    "gatsby-remark-prismjs": "^2.0.2",
-    "gatsby-source-filesystem": "^1.5.33",
-    "gatsby-transformer-remark": "^1.7.40",
-    "prismjs": "^1.14.0",
+    "gatsby": "^2.0.35",
+    "gatsby-link": "^2.0.6",
+    "gatsby-plugin-google-analytics": "^2.0.7",
+    "gatsby-plugin-react-helmet": "^3.0.1",
+    "gatsby-plugin-typography": "^2.2.1",
+    "gatsby-remark-prismjs": "^3.0.3",
+    "gatsby-source-filesystem": "^2.0.6",
+    "gatsby-transformer-remark": "^2.1.11",
+    "prismjs": "^1.15.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
-    "typography": "^0.16.16",
+    "typography": "^0.16.17",
     "typography-theme-de-young": "^0.16.9"
   },
   "keywords": [
@@ -29,6 +31,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.12.1"
+    "prettier": "^1.14.3"
   }
 }
